--- a/web/templates/topic/topic_item.html.eex
+++ b/web/templates/topic/topic_item.html.eex
@@ -1,13 +1,16 @@
 <li class="collection-item clearfix">
-    <%= @topic.title %> 
-    <div class="right">
-        <%= link to: topic_path(@conn, :edit, @topic), class: "btn btn-small btn-primary blue-grey" do %>
-            <span>edit</span>
-        <% end %>
 
-        <%= link to: topic_path(@conn, :delete, @topic), method: :delete do %>
-            <button class="btn btn-small red right">Delete</button>
-        <% end%>
-    </div>
+    <%= link @topic.title, to: topic_path(@conn, :show, @topic) %>
+    <%= if user_owns_topic(@conn, @topic) do %>
+        <div class="right">
+            <%= link to: topic_path(@conn, :edit, @topic), class: "btn btn-small btn-primary blue-grey" do %>
+                <span>edit</span>
+            <% end %>
+
+            <%= link to: topic_path(@conn, :delete, @topic), method: :delete do %>
+                <button class="btn btn-small red right">Delete</button>
+            <% end%>
+        </div>
+    <% end %>
 
 </li>
